bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_java", version = "9.1.0")


git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")


git_repository(
  name = "duckutil",
  remote = "https://github.com/fireduck64/duckutil",
  commit = "cae7e8abb4939497dfa4f509c2b896a5fc290010",
  shallow_since = "1648055343 -0700"
)

# Maven dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "junit:junit:4.12",
        "com.thetransactioncompany:jsonrpc2-server:1.11",
        "com.amazonaws:aws-java-sdk:1.12.336",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com",
    ],
)

use_repo(maven, "maven")
